--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
-h1 {
+h1, h3 {
 	text-align: center;
+
+}
+
+.banner img {
+	height: 200px;
+	width: 300px;
+	display: block;
+	margin: auto;
+	border-radius: 20px;
 }
