--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
-h1, h3 {
+body {
+	background-color: #FFEEE1;
+	margin: 30px;
+}
+h1, h2 {
+	font-family: 'Amatic SC', cursive;
 	text-align: center;
+	border-radius: 5px;
+	padding: 10px;
+	background-color: #F6BED4;
 
 }
 
 .banner img {
-	height: 200px;
-	width: 300px;
-	display: block;
-	margin: auto;
+    
+    margin-left: auto;
+    margin-right: auto;
+    width: 32%;
+
 	border-radius: 20px;
+}
+
+.card img{
+	width: 32%;
+	border-radius: 10px;
+}
+
+#half, #half2 {
+	width: 49%;
+	border-radius: 10px;
+
 }
